improvement: remove statcounter and footer reference to Bluesky

--- a/site/templates/macros/footer.html
+++ b/site/templates/macros/footer.html
@@ -3,7 +3,7 @@
         <div class="copyright copyright--user">{{ config.extra.copyright | safe }}</div>
     {%- else -%}
         <div class="copyright">
-            <span>© {{ now() | date(format="%Y") }} Jeffery D Mitchell :: Powered by <a href="https://www.getzola.org/">Zola</a>:: Zerm theme made by <a href="https://github.com/ejmg">ejmg</a> :: Hosted on <a href="https://shuttle.rs">Shuttle</a> :: Follow me (and ask questions or comment) on <a href="https://bsky.app/profile/jeff-mitchell-dev.bsky.social">Bluesky</a></span>
+            <span>© {{ now() | date(format="%Y") }} Jeffery D Mitchell :: Powered by <a href="https://www.getzola.org/">Zola</a>:: Zerm theme made by <a href="https://github.com/ejmg">ejmg</a> :: Hosted on <a href="https://shuttle.rs">Shuttle</a> </span>
         </div>
     {%- endif -%}
 {% endmacro copyright %}
